# BuilderMaintenancePro

./: .replit  app.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  utils.py
.github/: FUNDING.yml
migrations/versions/: 281c5905b65a_add_priority_field_to_workorder.py  7dd87e3dfc02_increase_password_hash_length.py  a8a283d29018_create_user_table.py
static/css/: custom.css
static/js/: company_setup.js  dashboard.js  maintenance_log.js  work_order.js
templates/: base.html  company_setup.html  dashboard.html  login.html  maintenance_log.html  reports.html  signup.html  work_order.html
